[v#.#.#] ([month] [YYYY])
  - Editor:
    - Add functionality to quote text from comments and resource content (cards, evidence, issues, notes, etc)
    - Limit the content height for easier access to the Create/Update button
  - Evidence:
    - Create a new issue (optionally) when creating new evidence
  - Tylium:
    - Import CSS manifests from addon
    - Remove extra left padding from the first line of content in a code block
  - Upgraded gems:
    - nokogiri, puma, rails
  - Bugs fixes:
    - Methodologies:
      - Ensure boards don't nest when the instance has been inactive
    - Bug tracker items:
      - [item]
  - New integrations:
    - [integration]
  - Integration enhancements:
    - [integration]:
      - [future tense verb] [integration enhancement]
      - [integration bug fixes]:
        - [future tense verb] [integration bug fix]
  - Reporting enhancements:
    - [report type]:
      - [future tense verb] [reporting enhancement]
  - REST/JSON API enhancements:
    - [API entity]:
      - [future tense verb] [API enhancement]
  - Security Fixes:
    - High: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Medium: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Low: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]

v4.0.0 (July 2021)
  * Dynamic content across the app
  * Upgraded gems: capybara, jquery-rails, rails, rdoc, resque-status, rubocop, nokogiri, papertrail, puma,
  * Bugs fixed:
    - Fix uploading of attachments with names that have newlines
  * REST/JSON API enhancements:
    - Add pagination support

v3.22.0 (April 2021)
  * Added the ability to import Configuration Kits
  * Comments
    - Load feed asynchronously
  * Improve accessibility:
    - Add alt text to any linked images
    - Add screen reader only text to forms