@@ -1,6 +1,7 @@
 [v#.#.#] ([month] [YYYY])
   - Editor:
     - Add functionality to quote text from comments and resource content (cards, evidence, issues, notes, etc)
+    - Insert an appropriate single or multiline tag for blockquotes and codeblocks
     - Limit the content height for easier access to the Create/Update button
   - Evidence:
     - Create a new issue (optionally) when creating new evidence
